GitVersion1/objects/DCR_Day__c.object
<CustomObject>
    <description>This object stores details about DCR(Daily Call Reporting).</description>
    <fields>
        <fullName>Accompanied_By__c</fullName>
        <label>Accompanied By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VSA</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>RSM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DCR Days</relationshipLabel>
        <relationshipName>DCR_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Visit__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Branch Visit&apos;),  ISPICKVAL(Second_Half__c, &apos;Branch Visit&apos;)),1.0,
	IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Branch Visit&apos;),  NOT(ISPICKVAL(Second_Half__c, &apos;Branch Visit&apos;))),0.5,
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Branch Visit&apos;),  NOT(ISPICKVAL(First_Half__c, &apos;Branch Visit&apos;))),0.5,0.0))
	)</formula>
        <label>Branch Visit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Reminder1_Quantity__c</fullName>
        <label>Brand Reminder 1 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Reminder1__c</fullName>
        <label>Brand Reminder 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Park Avenue Deo &amp; Talc combo kit</fullName>
                </value>
                <value>
                    <fullName>Vetaceph Customized Table clock</fullName>
                </value>
                <value>
                    <fullName>Paravet Education LBL 1</fullName>
                </value>
                <value>
                    <fullName>Lunch box &amp; School bag (Painting compn.)</fullName>
                </value>
                <value>
                    <fullName>Mastitis Surgical Kit</fullName>
                </value>
                <value>
                    <fullName>CMT Kit</fullName>
                </value>
                <value>
                    <fullName>Freedom from Mastitis LBL</fullName>
                </value>
                <value>
                    <fullName>LaOpala Tea Cup Set of 6</fullName>
                </value>
                <value>
                    <fullName>Duraprogen Ampoule Cutter </fullName>
                </value>
                <value>
                    <fullName>DuraBulletin 1</fullName>
                </value>
                <value>
                    <fullName>Uterine Involution LBL</fullName>
                </value>
                <value>
                    <fullName>Casserole</fullName>
                </value>
                <value>
                    <fullName>3 Level Utility Rack for retailers</fullName>
                </value>
                <value>
                    <fullName>Retailer Order Book</fullName>
                </value>
                <value>
                    <fullName>Bestmin Gold Rxber Thank you LBL</fullName>
                </value>
                <value>
                    <fullName>Calup Gel Sticker</fullName>
                </value>
                <value>
                    <fullName>Asali Ionic Ca Poster</fullName>
                </value>
                <value>
                    <fullName>Enerzal Energy Drink</fullName>
                </value>
                <value>
                    <fullName>Dairy Farmers Booklet</fullName>
                </value>
                <value>
                    <fullName>Panting Score Card LBL</fullName>
                </value>
                <value>
                    <fullName>Heat Stress LBL</fullName>
                </value>
                <value>
                    <fullName>Chopper with Board</fullName>
                </value>
                <value>
                    <fullName>Shepherd Gift - Torch </fullName>
                </value>
                <value>
                    <fullName>Nasco Tape</fullName>
                </value>
                <value>
                    <fullName>Deworming LBL</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN BOOKLET</fullName>
                </value>
                <value>
                    <fullName>PIB ENGLISH</fullName>
                </value>
                <value>
                    <fullName>WEIGHING BALANCE</fullName>
                </value>
                <value>
                    <fullName>COFFEE MUG</fullName>
                </value>
                <value>
                    <fullName>GLVOES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Reminder2_Quantity__c</fullName>
        <label>Brand Reminder 2 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Reminder2__c</fullName>
        <label>Brand Reminder 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Park Avenue Deo &amp; Talc combo kit</fullName>
                </value>
                <value>
                    <fullName>Vetaceph Customized Table clock</fullName>
                </value>
                <value>
                    <fullName>Paravet Education LBL 1</fullName>
                </value>
                <value>
                    <fullName>Lunch box &amp; School bag (Painting compn.)</fullName>
                </value>
                <value>
                    <fullName>Mastitis Surgical Kit</fullName>
                </value>
                <value>
                    <fullName>CMT Kit</fullName>
                </value>
                <value>
                    <fullName>Freedom from Mastitis LBL</fullName>
                </value>
                <value>
                    <fullName>LaOpala Tea Cup Set of 6</fullName>
                </value>
                <value>
                    <fullName>Duraprogen Ampoule Cutter </fullName>
                </value>
                <value>
                    <fullName>DuraBulletin 1</fullName>
                </value>
                <value>
                    <fullName>Uterine Involution LBL</fullName>
                </value>
                <value>
                    <fullName>Casserole</fullName>
                </value>
                <value>
                    <fullName>3 Level Utility Rack for retailers</fullName>
                </value>
                <value>
                    <fullName>Retailer Order Book</fullName>
                </value>
                <value>
                    <fullName>Bestmin Gold Rxber Thank you LBL</fullName>
                </value>
                <value>
                    <fullName>Calup Gel Sticker</fullName>
                </value>
                <value>
                    <fullName>Asali Ionic Ca Poster</fullName>
                </value>
                <value>
                    <fullName>Enerzal Energy Drink</fullName>
                </value>
                <value>
                    <fullName>Dairy Farmers Booklet</fullName>
                </value>
                <value>
                    <fullName>Panting Score Card LBL</fullName>
                </value>
                <value>
                    <fullName>Heat Stress LBL</fullName>
                </value>
                <value>
                    <fullName>Chopper with Board</fullName>
                </value>
                <value>
                    <fullName>Shepherd Gift - Torch </fullName>
                </value>
                <value>
                    <fullName>Nasco Tape</fullName>
                </value>
                <value>
                    <fullName>Deworming LBL</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN BOOKLET</fullName>
                </value>
                <value>
                    <fullName>PIB ENGLISH</fullName>
                </value>
                <value>
                    <fullName>WEIGHING BALANCE</fullName>
                </value>
                <value>
                    <fullName>COFFEE MUG</fullName>
                </value>
                <value>
                    <fullName>GLVOES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Reminder3_Quantity__c</fullName>
        <label>Brand Reminder 3 Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Reminder3__c</fullName>
        <label>Brand Reminder 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Park Avenue Deo &amp; Talc combo kit</fullName>
                </value>
                <value>
                    <fullName>Vetaceph Customized Table clock</fullName>
                </value>
                <value>
                    <fullName>Paravet Education LBL 1</fullName>
                </value>
                <value>
                    <fullName>Lunch box &amp; School bag (Painting compn.)</fullName>
                </value>
                <value>
                    <fullName>Mastitis Surgical Kit</fullName>
                </value>
                <value>
                    <fullName>CMT Kit</fullName>
                </value>
                <value>
                    <fullName>Freedom from Mastitis LBL</fullName>
                </value>
                <value>
                    <fullName>LaOpala Tea Cup Set of 6</fullName>
                </value>
                <value>
                    <fullName>Duraprogen Ampoule Cutter </fullName>
                </value>
                <value>
                    <fullName>DuraBulletin 1</fullName>
                </value>
                <value>
                    <fullName>Uterine Involution LBL</fullName>
                </value>
                <value>
                    <fullName>Casserole</fullName>
                </value>
                <value>
                    <fullName>3 Level Utility Rack for retailers</fullName>
                </value>
                <value>
                    <fullName>Retailer Order Book</fullName>
                </value>
                <value>
                    <fullName>Bestmin Gold Rxber Thank you LBL</fullName>
                </value>
                <value>
                    <fullName>Calup Gel Sticker</fullName>
                </value>
                <value>
                    <fullName>Asali Ionic Ca Poster</fullName>
                </value>
                <value>
                    <fullName>Enerzal Energy Drink</fullName>
                </value>
                <value>
                    <fullName>Dairy Farmers Booklet</fullName>
                </value>
                <value>
                    <fullName>Panting Score Card LBL</fullName>
                </value>
                <value>
                    <fullName>Heat Stress LBL</fullName>
                </value>
                <value>
                    <fullName>Chopper with Board</fullName>
                </value>
                <value>
                    <fullName>Shepherd Gift - Torch </fullName>
                </value>
                <value>
                    <fullName>Nasco Tape</fullName>
                </value>
                <value>
                    <fullName>Deworming LBL</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN BOOKLET</fullName>
                </value>
                <value>
                    <fullName>PIB ENGLISH</fullName>
                </value>
                <value>
                    <fullName>WEIGHING BALANCE</fullName>
                </value>
                <value>
                    <fullName>COFFEE MUG</fullName>
                </value>
                <value>
                    <fullName>GLVOES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Text__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the associated Account&apos;s contacts only.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DCR Days</relationshipLabel>
        <relationshipName>DCR_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDateCustom__c</fullName>
        <description>Created for locking DCR record through process builder</description>
        <label>CreatedDateCustom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerDCRDate__c</fullName>
        <formula>DCR_Day__r.Day__c</formula>
        <label>CustomerDCRDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerDCRTerrID__c</fullName>
        <formula>DCR_Day__r.Target__c</formula>
        <label>CustomerDCRTerrID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Visit__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Customer Visit&apos;),  ISPICKVAL(Second_Half__c, &apos;Customer Visit&apos;)),1.0,
	IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Customer Visit&apos;),  NOT(ISPICKVAL(Second_Half__c, &apos;Customer Visit&apos;))),0.5,
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Customer Visit&apos;),  NOT(ISPICKVAL(First_Half__c, &apos;Customer Visit&apos;))),0.5,0.0))
	)</formula>
        <label>Customer Visit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCR_Customers__c</fullName>
        <formula>Name</formula>
        <label>DCR Customers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCR_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCR Day</label>
        <referenceTo>DCR_Day__c</referenceTo>
        <relationshipLabel>DCR Customers</relationshipLabel>
        <relationshipName>DCR_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCR_Locked_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To set to true if DCR Lock Process builder runs.</description>
        <label>DCR Locked Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCR_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCR Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCR_Unique_Key__c</fullName>
        <label>DCR Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCR_Unlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check is set if Data Steward Unlocks the Locked record.</description>
        <label>DCR Unlocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dog_Show__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Dog Show&apos;), ISPICKVAL(Second_Half__c, &apos;Dog Show&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Dog Show&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Dog Show&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Dog Show&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Dog Show&apos;))),0.5,0.0)) 
)</formula>
        <label>Dog Show</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exhibition__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Exhibition&apos;), ISPICKVAL(Second_Half__c, &apos;Exhibition&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Exhibition&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Exhibition&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Exhibition&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Exhibition&apos;))),0.5,0.0)) 
)</formula>
        <label>Exhibition</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Half__c</fullName>
        <label>First Half</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Group Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Transit</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Branch Visit</fullName>
                </value>
                <value>
                    <fullName>Regional Office</fullName>
                </value>
                <value>
                    <fullName>Dog Show</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>On Field</fullName>
                    <isActive>false</isActive>
                    <label>On Field</label>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                    <isActive>false</isActive>
                    <label>Vacation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Meeting__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Group Meeting&apos;), ISPICKVAL(Second_Half__c, &apos;Group Meeting&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Group Meeting&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Group Meeting&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Group Meeting&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Group Meeting&apos;))),0.5,0.0)) 
)</formula>
        <label>Group Meeting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Holiday&apos;), ISPICKVAL(Second_Half__c, &apos;Holiday&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Holiday&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Holiday&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Holiday&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Holiday&apos;))),0.5,0.0)) 
)</formula>
        <label>Holiday</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JFW__c</fullName>
        <label>JFW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AH - Dairy</fullName>
                </value>
                <value>
                    <fullName>AH - Poultry</fullName>
                </value>
                <value>
                    <fullName>AN - Poultry</fullName>
                </value>
                <value>
                    <fullName>AH - Petcare</fullName>
                </value>
                <value>
                    <fullName>AN Dairy - Feed Additives</fullName>
                </value>
                <value>
                    <fullName>IBG TRADING</fullName>
                </value>
                <value>
                    <fullName>AN - Feed Additives</fullName>
                    <isActive>false</isActive>
                    <label>AN - Feed Additives</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Leave&apos;), ISPICKVAL(Second_Half__c, &apos;Leave&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Leave&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Leave&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Leave&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Leave&apos;))),0.5,0.0)) 
)</formula>
        <label>Leave</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <formula>TEXT(Target__r.Employee_Link_To__r.Line_Of_Business__c)</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <formula>IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Meeting&apos;), ISPICKVAL(Second_Half__c, &apos;Meeting&apos;)),1.0, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(First_Half__c, &apos;Meeting&apos;), NOT(ISPICKVAL(Second_Half__c, &apos;Meeting&apos;))),0.5, 
IF(AND(RecordType.DeveloperName == $Label.DCR_Day_RecordType, ISPICKVAL(Second_Half__c, &apos;Meeting&apos;), NOT(ISPICKVAL(First_Half__c, &apos;Meeting&apos;))),0.5,0.0)) 
)</formula>
        <label>Meeting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos;+ Owner:User.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POB__c</fullName>
        <label>POB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDCRDate__c</fullName>
        <formula>DCR_Day__r.Day__c</formula>
        <label>ParentDCRDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedDeviation__c</fullName>
        <formula>IF(RecordType.DeveloperName == $Label.DCR_Customer_Record_Type &amp;&amp; Route__c &lt;&gt;   Planned_Day__r.Route__c ,true,false)</formula>
        <label>Planned Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Day</label>
        <referenceTo>Planning_Month__c</referenceTo>
        <relationshipLabel>DCR Days</relationshipLabel>
        <relationshipName>DCR_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product Discussed 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VETACEPH PLUS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH</fullName>
                </value>
                <value>
                    <fullName>3 CARE BOLUS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR BOLUS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL</fullName>
                </value>
                <value>
                    <fullName>COBACAL D</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ.</fullName>
                </value>
                <value>
                    <fullName>WUNIL</fullName>
                </value>
                <value>
                    <fullName>DETIK</fullName>
                </value>
                <value>
                    <fullName>E CARE SE ORAL</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUPREME</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX</fullName>
                </value>
                <value>
                    <fullName>VETMATE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS</fullName>
                </value>
                <value>
                    <fullName>E CARE SE INJ</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product Discussed 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VETACEPH PLUS</fullName>
                </value>
                <value>
                    <fullName>KLUTCH</fullName>
                </value>
                <value>
                    <fullName>3 CARE BOLUS</fullName>
                </value>
                <value>
                    <fullName>ALL CLEAR BOLUS</fullName>
                </value>
                <value>
                    <fullName>BESTMIN GOLD</fullName>
                </value>
                <value>
                    <fullName>CALUP GEL</fullName>
                </value>
                <value>
                    <fullName>COBACAL D</fullName>
                </value>
                <value>
                    <fullName>DURAPROGEN</fullName>
                </value>
                <value>
                    <fullName>FLUKOUT</fullName>
                </value>
                <value>
                    <fullName>GALACSHOT</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL LIQUID</fullName>
                </value>
                <value>
                    <fullName>METHOCHELATED PROVICAL FORTE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC POWER PACK</fullName>
                </value>
                <value>
                    <fullName>POLYGESIC INJ</fullName>
                </value>
                <value>
                    <fullName>PROVISACC FORTE</fullName>
                </value>
                <value>
                    <fullName>PROVISACC BOLUS</fullName>
                </value>
                <value>
                    <fullName>PROVISACC PLUS BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>PYRIDASE BOLUS 4*S</fullName>
                </value>
                <value>
                    <fullName>UNIMYCIN INJ.</fullName>
                </value>
                <value>
                    <fullName>WUNIL</fullName>
                </value>
                <value>
                    <fullName>DETIK</fullName>
                </value>
                <value>
                    <fullName>E CARE SE ORAL</fullName>
                </value>
                <value>
                    <fullName>HELMIGARD SUPREME</fullName>
                </value>
                <value>
                    <fullName>BOVIZOX</fullName>
                </value>
                <value>
                    <fullName>VETMATE</fullName>
                </value>
                <value>
                    <fullName>NUTRISACC ADVANCE BOLUS</fullName>
                </value>
                <value>
                    <fullName>E CARE SE INJ</fullName>
                </value>
                <value>
                    <fullName>VETACEPH TAZO</fullName>
                </value>
                <value>
                    <fullName>LIVOFEROL P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>